[metadata]
name = usps_tracking_tool
version = 1.0.0
author = Larry Hui
author_email = larryhui@outlook.com
description = Track your packages with the USPS Track Request API using Python 3
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
url = https://github.com/LiterallyLarry/USPS-Tracking-Python
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
project_urls = 
    Bug Tracker = https://github.com/LiterallyLarry/USPS-Tracking-Python/issues
    
[options]
packages = find:
python_requires = >=3.4

[options.package_data]
usps_tracking_tool = config.json

[options.entry_points]
console_scripts =
    usps-tracking-tool = usps_tracking_tool.tracking:main

